perf(processor): EFF-P3-1 RuleContext.values() 零拷贝不可修改视图（镜像 F1） (#94)
* perf(processor): EFF-P3-1 RuleContext.values() 零拷贝不可修改视图（镜像 F1）

values() 由 List.copyOf 改为 Collections.unmodifiableList，返回内部只读 List 的零拷贝不可修改视图，省去每报文×规则×字段值列表一次数组克隆。RuleContext 构造后只读（parse 完成后 fields 及内部 List 不再 mutate），视图不泄漏可变状态；镜像 MessageRuleRegistry#rulesFor F1 同型优化。新增 values_returnedListShouldBeUnmodifiable 契约保护测试（present+absent 双路）。

行为保持。fep-processor verify: Tests run 636, Failures 0, Errors 0; SpotBugs BugInstance 0; Checkstyle clean; ArchUnit PASS。spec + quality review 双 PASS（0 BLOCKER，1 可选 MINOR 未采纳）。

AI-Generated: claude-code

Reviewed-By: pending

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* docs(plans): EFF-P3-1 RuleContext.values 零拷贝不可修改视图 standalone Plan（追溯）

追溯性 standalone micro-Plan：背景/F1 镜像、copyOf vs unmodifiableList 行为等价证明、范围、TDD 守护（净加 1 契约测试，content/order 复用既有）、Windows 回归命令实测记录、§8 如实签字门（AI 双 review PASS 代行 santa + muzhou 选定 + 终签于 PR merge）。配 commit f14fc81 同 PR。

AI-Generated: claude-code

Reviewed-By: pending

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

---------

Co-authored-by: dadale <116076057+dadale-d@users.noreply.github.com>
Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>